# texcore

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  main.tex
.github/workflows/: rust.yml
examples/: async_example.rs  doc_example.rs  table_example.rs  template_example.rs
src/: bundle.rs  element.rs  extra_ops.rs  future.rs  level.rs  lib.rs  macros.rs  template.rs  tests.rs  ty.rs  type_.rs
src/bundle/: graphicx.rs  math.rs  tables.rs
texcore_derive/: Cargo.toml
texcore_derive/src/: lib.rs
texcore_traits/: Cargo.toml
texcore_traits/src/: lib.rs
