[package]
name = "texcore"
version = "0.3.3"
edition = "2021"
authors = ["Mustafif Khan"]
description = "Write latex in rust, and either compile it to pdf or output the tex code"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
tectonic = { version = "0.12.0", optional = true }
serde = { version = "1", features = ["derive"] }
document-features = "0.2.6"
[features]
default = []
#! Allows compiling latex code to a pdf using the `tectonic` crate
compile = ["dep:tectonic"]