[package]
name = "texcore"
version = "0.7.0"
edition = "2021"
authors = ["Mustafif Khan"]
description = "Create LaTeX documents using native Rust types."
documentation = "https://docs.rs/crate/texcore/latest"
homepage = "https://texcreate.mkproj.com"
repository = "https://github.com/MKProj/texcore"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tectonic = { version = "0.12.0", optional = true }
serde_json = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
futures = { version = "0.3.26", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
rayon = { version = "1.7.0", optional = true }
texcore_traits = { version = "0.1.0", path = "texcore_traits" }

[features]
default = []
#! Allows compiling latex code to a pdf using the `tectonic` crate
compile = ["dep:tectonic"]
#! Allows using the `Template` type for TexCreate
texcreate_template = ["dep:serde_json", "async"]
#! Provides asynchronous alternatives
async = ["dep:futures", "dep:tokio", "dep:async-trait"]
#! Provides ways to iterate and write latex in parallel using `rayon`
parallel = ["dep:rayon"]
#! Provides all production features
full = ["compile", "texcreate_template", "async", "parallel"]
#! Features needed for testing
testing = ["async", "parallel"]
[package.metadata.docs.rs]
all-features = true
features = ["full"]
