[package]
name = "texcore_derive"
version = "0.1.0"
edition = "2021"
description = "Provides derive macros to the TexCore library."
license = "MIT"
documentation = "https://docs.rs/crate/texcore_derive/latest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.109"
quote = "1.0.23"
